src/index.css
@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800&display=swap");

:root {
  --bg-color: #fafafa;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
img {
  max-width: 100%;
}
body {
  font-family: "Nunito Sans", sans-serif;
  background-color: var(--bg-color) !important;
}

/*
Scrollbar Styling
*/

#style-1::-webkit-scrollbar-track {
  -webkit-box-shadow: inset 0 0 2px rgba(0, 0, 0, 0.3);
  background-color: #f5f5f5;
  border-color: #121212;
}

#style-1::-webkit-scrollbar {
  width: 15px;
  background-color: #f5f5f5;
}

#style-1::-webkit-scrollbar-thumb {
  border-radius: 10px;
  background-color: #c1c1c1;
  height: 6%;
}

@media (max-width: 414px) {
  #style-1 {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
  #style-1::-webkit-scrollbar {
    display: none;
  }
}

